feat: rewrite update
